--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -22,6 +22,8 @@ pull-header = X-SSE-Offload SSE_OFFLOAD
 pull-header = X-SSE-Server SSE_SERVER
 pull-header = X-SSE-Channel SSE_CHANNEL
 pull-header = X-SSE-Password SSE_PASSWORD
+response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Origin: *
+response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Methods: HEAD, GET
 response-route-if-not = empty:${SSE_OFFLOAD} sse:server=${SSE_SERVER},subscribe=${SSE_CHANNEL},password=${SSE_PASSWORD}
 
 [dev]
@@ -51,4 +53,6 @@ pull-header = X-SSE-Offload SSE_OFFLOAD
 pull-header = X-SSE-Server SSE_SERVER
 pull-header = X-SSE-Channel SSE_CHANNEL
 pull-header = X-SSE-Password SSE_PASSWORD
+response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Origin: *
+response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Methods: HEAD, GET
 response-route-if-not = empty:${SSE_OFFLOAD} sse:server=${SSE_SERVER},subscribe=${SSE_CHANNEL},password=${SSE_PASSWORD}
