Switch to nchan for SSE stuff

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,7 +9,7 @@ offload-threads = 4
 harakiri = 30
 
 chdir = /srv/http/trackman
-plugins = python,sse_offload
+plugins = python
 module = trackman
 callable = app
 
@@ -17,14 +17,6 @@ add-header = Content-Security-Policy: default-src 'self' https:; script-src 'sel
 add-header = X-Frame-Options: SAMEORIGIN
 static-map = /robots.txt=trackman/static/robots.txt
 static-map = /static=trackman/static
-
-pull-header = X-SSE-Offload SSE_OFFLOAD
-pull-header = X-SSE-Server SSE_SERVER
-pull-header = X-SSE-Channel SSE_CHANNEL
-pull-header = X-SSE-Password SSE_PASSWORD
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Origin: *
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Methods: HEAD, GET
-response-route-if-not = empty:${SSE_OFFLOAD} sse:server=${SSE_SERVER},subscribe=${SSE_CHANNEL},password=${SSE_PASSWORD}
 
 [dev]
 procname-prefix-spaced = trackman
@@ -36,7 +28,7 @@ harakiri = 30
 
 attach-daemon = celery -A trackman.tasks.celery worker -B
 
-plugins = python,sse_offload
+plugins = python
 py-autoreload = 1
 if-env = VIRTUAL_ENV
 virtualenv = '%(_)'
@@ -48,11 +40,3 @@ add-header = Content-Security-Policy: default-src 'self' https:; script-src 'sel
 add-header = X-Frame-Options: SAMEORIGIN
 static-map = /robots.txt=wuvt/static/robots.txt
 static-map = /static=wuvt/static
-
-pull-header = X-SSE-Offload SSE_OFFLOAD
-pull-header = X-SSE-Server SSE_SERVER
-pull-header = X-SSE-Channel SSE_CHANNEL
-pull-header = X-SSE-Password SSE_PASSWORD
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Origin: *
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Methods: HEAD, GET
-response-route-if-not = empty:${SSE_OFFLOAD} sse:server=${SSE_SERVER},subscribe=${SSE_CHANNEL},password=${SSE_PASSWORD}
