--- a/uwsgi_docker.ini
+++ b/uwsgi_docker.ini
@@ -13,24 +13,15 @@ callable = app
 
 attach-daemon = celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule
 
-add-header = Content-Security-Policy: default-src 'self' https:; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'
+add-header = Content-Security-Policy: default-src 'self' https:; connect-src 'self' *; script-src 'self'; style-src 'self' https://fonts.googleapis.com; media-src 'self' *; frame-ancestors 'self'
 add-header = X-Frame-Options: SAMEORIGIN
 
 static-map = /robots.txt=trackman/static/robots.txt
 static-map = /static=trackman/static
 
-pull-header = X-SSE-Offload SSE_OFFLOAD
-pull-header = X-SSE-Server SSE_SERVER
-pull-header = X-SSE-Channel SSE_CHANNEL
-pull-header = X-SSE-Password SSE_PASSWORD
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Origin: *
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Methods: HEAD, GET
-response-route-if-not = empty:${SSE_OFFLOAD} sse:server=${SSE_SERVER},subscribe=${SSE_CHANNEL},password=${SSE_PASSWORD}
-
 [dev]
 procname-prefix-spaced = trackman
 master = 1
-master-as-root = 1
 uid = www-data
 gid = www-data
 http = :8080
@@ -38,23 +29,13 @@ processes = 2
 offload-threads = 1
 harakiri = 90
 
-py-autoreload = 1
 module = trackman
 callable = app
 
-attach-daemon2 = cmd=redis-server /etc/redis/redis.conf,pidfile=/var/run/redis/redis-server.pid,uid=106,gid=111
-attach-daemon2 = cmd=celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule,uid=33,gid=33
+attach-daemon = celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule
 
 add-header = Content-Security-Policy: default-src 'self' https:; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'
 add-header = X-Frame-Options: SAMEORIGIN
 
 static-map = /robots.txt=trackman/static/robots.txt
 static-map = /static=trackman/static
-
-pull-header = X-SSE-Offload SSE_OFFLOAD
-pull-header = X-SSE-Server SSE_SERVER
-pull-header = X-SSE-Channel SSE_CHANNEL
-pull-header = X-SSE-Password SSE_PASSWORD
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Origin: *
-response-route-if-not = empty:${SSE_OFFLOAD} addheader:Access-Control-Allow-Methods: HEAD, GET
-response-route-if-not = empty:${SSE_OFFLOAD} sse:server=${SSE_SERVER},subscribe=${SSE_CHANNEL},password=${SSE_PASSWORD}
