Use private interface for nchan, fix CSP

--- a/nchan/conf.d/nchan.conf
+++ b/nchan/conf.d/nchan.conf
@@ -10,11 +10,6 @@ server {
         nchan_access_control_allow_origin "*";
     }
 
-    location = /pub {
-        nchan_publisher;
-        nchan_channel_id trackman_public;
-    }
-
     location = /dj/sub {
         add_header Content-Security-Policy "default-src 'self'";
 
@@ -23,10 +18,18 @@ server {
         nchan_subscriber_first_message newest;
         nchan_access_control_allow_origin "*";
     }
+}
+
+server {
+    listen 8080;
+
+    location = /pub {
+        nchan_publisher;
+        nchan_channel_id trackman_public;
+    }
 
     location = /dj/pub {
         nchan_publisher;
         nchan_channel_id trackman_dj;
     }
-
 }
