--- a/uwsgi_docker.ini
+++ b/uwsgi_docker.ini
@@ -34,7 +34,7 @@ callable = app
 
 attach-daemon = celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule
 
-add-header = Content-Security-Policy: default-src 'self' https:; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'
+add-header = Content-Security-Policy: default-src 'self' https:; connect-src 'self' *; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'
 add-header = X-Frame-Options: SAMEORIGIN
 
 static-map = /robots.txt=trackman/static/robots.txt
