--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile.dev
     ports:
     - "9090:8080"
+    expose:
+    - "8080"
     environment:
     - APP_CONFIG_PATH=/data/config/config.json
     - USE_EMBEDDED_DB
