Run nginx in front instead of using uWSGI HTTP

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,41 +1,25 @@
 [uwsgi]
 procname-prefix-spaced = trackman
-master = 1
 uid = www-data
 gid = www-data
-https = :8443,/data/ssl/cert.pem,/data/ssl/privkey.pem,ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK
+uwsgi-socket = :5000
 processes = 10
-offload-threads = 4
 harakiri = 90
 
 module = trackman
 callable = app
 
 attach-daemon = celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule
-
-add-header = Content-Security-Policy: default-src 'self' https:; connect-src 'self' *; script-src 'self'; style-src 'self' https://fonts.googleapis.com; media-src 'self' *; frame-ancestors 'self'
-add-header = X-Frame-Options: SAMEORIGIN
-
-static-map = /robots.txt=trackman/static/robots.txt
-static-map = /static=trackman/static
 
 [dev]
 procname-prefix-spaced = trackman
-master = 1
 uid = www-data
 gid = www-data
-http = :8080
+uwsgi-socket = :5000
 processes = 2
-offload-threads = 1
 harakiri = 90
 
 module = trackman
 callable = app
 
 attach-daemon = celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule
-
-add-header = Content-Security-Policy: default-src 'self' https:; connect-src 'self' *; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'
-add-header = X-Frame-Options: SAMEORIGIN
-
-static-map = /robots.txt=trackman/static/robots.txt
-static-map = /static=trackman/static
