--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
 version: '3'
 services:
-  web:
+  app:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    ports:
-    - "9090:8080"
-    expose:
-    - "8080"
     environment:
     - APP_CONFIG_PATH=/data/config/config.json
     - USE_EMBEDDED_DB
@@ -17,16 +13,18 @@ services:
     - postgres
     depends_on:
     - redis
-    - nchan
-  nchan:
+  nginx:
     image: meroje/alpine-nchan:1.1.8
     ports:
-    - "9075:80"
+    - "9090:80"
     expose:
-    - "80"
+    - "9090"
+    depends_on:
+    - app
     volumes:
-    - ./nchan/nginx.conf:/etc/nginx/nginx.conf
-    - ./nchan/conf.d:/etc/nginx/conf.d
+    - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    - ./nginx/conf.d:/etc/nginx/conf.d
+    - ./trackman/static:/srv/http/static
   redis:
     image: redis:4-alpine
     expose:
