--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on:
     - redis
   nginx:
-    image: meroje/alpine-nchan:1.1.8
+    image: meroje/alpine-nchan:1.1.15
     ports:
     - "9090:80"
     expose:
@@ -23,7 +23,7 @@ services:
     - app
     volumes:
     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    - ./nginx/conf.d:/etc/nginx/conf.d
+    - ./nginx/conf.d/dev.conf:/etc/nginx/conf.d/default.conf
     - ./trackman/static:/srv/http/static
   redis:
     image: redis:4-alpine
