--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -6,6 +6,7 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
 
     location = /_pubsub/sub {
+        add_header Access-Control-Allow-Origin "*";
         add_header Content-Security-Policy "default-src 'self'";
         add_header X-Frame-Options "SAMEORIGIN";
 
