Remove custom connect-src

--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     absolute_redirect off;
 
-    add_header Content-Security-Policy "default-src 'self' https:; connect-src 'self' *; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'";
+    add_header Content-Security-Policy "default-src 'self' https:; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'";
     add_header X-Frame-Options "SAMEORIGIN";
 
     location = /_pubsub/sub {
