--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -27,14 +27,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /usr/src/app
 
+EXPOSE 5000
 ENV PYTHONPATH /usr/src/app
 ENV FLASK_APP trackman
 ENV USE_EMBEDDED_DB 1
 
-# set permissions and create media directory
-RUN chown www-data:www-data trackman . && \
-        install -d -o www-data -g www-data /data/media
+# set permissions
+RUN chown www-data:www-data trackman .
 
-EXPOSE 8080
 ENTRYPOINT ["/usr/src/app/entrypoint-dev.sh"]
 CMD ["uwsgi" , "--ini", "uwsgi.ini:dev"]
