--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,6 +5,7 @@ gid = www-data
 uwsgi-socket = :5000
 processes = 10
 harakiri = 90
+enable-threads = 1
 
 module = trackman
 callable = app
@@ -18,6 +19,7 @@ gid = www-data
 uwsgi-socket = :5000
 processes = 2
 harakiri = 90
+enable-threads = 1
 
 module = trackman
 callable = app
