Remove Celery and replace with APScheduler

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -10,8 +10,6 @@ enable-threads = 1
 module = trackman
 callable = app
 
-attach-daemon = celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule
-
 [dev]
 procname-prefix-spaced = trackman
 uid = www-data
@@ -24,4 +22,4 @@ enable-threads = 1
 module = trackman
 callable = app
 
-attach-daemon = celery -A trackman.tasks.celery worker -B -s /dev/shm/celerybeat-schedule
+attach-daemon = flask run-scheduler
