--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,12 @@
 #    pip-compile --output-file requirements.txt requirements.in
 #
 -e git+https://github.com/wuvt/python-musicbrainzngs#egg=musicbrainzngs
-alembic==1.0.0            # via flask-migrate
-amqp==2.3.2               # via kombu
+alembic==1.0.1            # via flask-migrate
 aniso8601==3.0.2          # via flask-restful
+apscheduler==3.5.3
 asn1crypto==0.24.0        # via cryptography
-billiard==3.5.0.4         # via celery
 blinker==1.4              # via raven
-celery==4.2.1
-certifi==2018.8.24        # via requests
+certifi==2018.10.15       # via requests
 cffi==1.11.5              # via cryptography
 chardet==3.0.4            # via requests
 click==7.0
@@ -27,9 +25,8 @@ flask==1.0.2
 httplib2==0.11.3          # via oauth2client
 humanize==0.5.1
 idna==2.7                 # via cryptography, requests
-itsdangerous==0.24        # via flask, flask-oidc
+itsdangerous==1.0.0       # via flask, flask-oidc
 jinja2==2.10              # via flask
-kombu==4.2.1              # via celery
 mako==1.0.7               # via alembic
 markdown==3.0.1
 markupsafe==1.0           # via jinja2, mako
@@ -46,13 +43,13 @@ python-redis-lock==3.2.0
 pytz==2018.5
 raven[flask]==6.9.0
 redis==2.10.6
-requests==2.19.1
+requests==2.20.0
 rsa==4.0                  # via oauth2client
-six==1.11.0               # via cryptography, flask-oidc, flask-restful, oauth2client, python-dateutil, sqlalchemy-utils
-sqlalchemy-utils==0.33.5
+six==1.11.0               # via apscheduler, cryptography, flask-oidc, flask-restful, oauth2client, python-dateutil, sqlalchemy-utils
+sqlalchemy-utils==0.33.6
 sqlalchemy==1.2.12
+tzlocal==1.5.1            # via apscheduler
 unidecode==1.0.22
-urllib3==1.23             # via requests
-vine==1.1.4               # via amqp
+urllib3==1.24             # via requests
 werkzeug==0.14.1          # via flask
 wtforms==2.2.1            # via flask-wtf
