Add cache setup to nginx dev.conf
Although it might not seem ideal to use a cache for the dev environment,
it's going to be hard to test that caching is working properly without
one.

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,4 @@
 FROM meroje/alpine-nchan:1.1.15
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 COPY trackman/static /srv/http/static
+RUN install -d -m 0700 /var/cache/nginx/trackman
