--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -1,3 +1,5 @@
+uwsgi_cache_path /var/cache/nginx/trackman keys_zone=trackman_cache:10m inactive=6h;
+
 server {
     listen 80;
     absolute_redirect off;
@@ -41,6 +43,15 @@ server {
 
     location /static {
         root /srv/http;
+    }
+
+    location /api/charts {
+        add_header X-Proxy-Cache $upstream_cache_status;
+
+        include uwsgi_params;
+        uwsgi_cache trackman_cache;
+        uwsgi_cache_key trackman$request_uri;
+        uwsgi_pass uwsgi://app:5000;
     }
 
     location / {
