Style fixups for trackman package
* Update tox.ini and add noqa lines to files as needed
* Fix indentation in a few spots

--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,6 @@
 [flake8]
-ignore = E121,E123,E126,E226,E24,E704,E501,E266
+ignore = E501,E711,E712
+per-file-ignores = \
+    trackman/__init__.py:E402,F401
+    trackman/admin/__init__.py:E402,F401
+    trackman/auth/__init__.py:F401
