--- a/requirements.txt
+++ b/requirements.txt
@@ -5,53 +5,49 @@
 #    pip-compile
 #
 -e git+https://github.com/wuvt/python-musicbrainzngs#egg=musicbrainzngs
-alembic==1.0.1            # via flask-migrate
-aniso8601==3.0.2          # via flask-restful
-apscheduler==3.5.3
-asn1crypto==0.24.0        # via cryptography
+alembic==1.0.10           # via flask-migrate
+aniso8601==7.0.0          # via flask-restful
+apscheduler==3.6.0
 blinker==1.4              # via sentry-sdk
-certifi==2018.10.15       # via requests, sentry-sdk
-cffi==1.11.5              # via cryptography
+certifi==2019.6.16        # via requests, sentry-sdk
 chardet==3.0.4            # via requests
 click==7.0
-cryptography==2.3.1       # via pymysql
-flask-caching==1.4.0
-flask-migrate==2.2.1
+flask-caching==1.7.2
+flask-migrate==2.5.2
 flask-oidc==1.4.0
-flask-restful==0.3.6
+flask-restful==0.3.7
 flask-sqlalchemy==2.4.0
 flask-wtf==0.14.2
-flask==1.0.2
-httplib2==0.11.3          # via oauth2client
+flask==1.0.3
+httplib2==0.13.0          # via oauth2client
 humanize==0.5.1
-idna==2.7                 # via cryptography, requests
+idna==2.8                 # via requests
 itsdangerous==1.1.0       # via flask, flask-oidc
-jinja2==2.10              # via flask
-mako==1.0.7               # via alembic
-markdown==3.0.1
-markupsafe==1.0           # via jinja2, mako
+jinja2==2.10.1            # via flask
+mako==1.0.12              # via alembic
+markdown==3.1.1
+markupsafe==1.1.1         # via jinja2, mako
 netaddr==0.7.19
 oauth2client==4.1.3       # via flask-oidc
-psycopg2==2.7.5
-pyasn1-modules==0.2.2
-pyasn1==0.4.4
-pycparser==2.19           # via cffi
-pymysql==0.9.2
-python-dateutil==2.7.3
-python-editor==1.0.3
-pytz==2018.5
-redis==2.10.6
-requests==2.20.0
+psycopg2==2.8.3
+pyasn1-modules==0.2.5
+pyasn1==0.4.5
+pymysql==0.9.3
+python-dateutil==2.8.0
+python-editor==1.0.4
+pytz==2019.1
+redis==3.2.1
+requests==2.22.0
 rsa==4.0                  # via oauth2client
-sentry-sdk[flask]==0.4.2
-six==1.11.0               # via apscheduler, cryptography, flask-oidc, flask-restful, oauth2client, python-dateutil, sqlalchemy-utils
-sqlalchemy-utils==0.33.6
-sqlalchemy==1.2.12
+sentry-sdk[flask]==0.9.1
+six==1.12.0               # via apscheduler, flask-oidc, flask-restful, oauth2client, python-dateutil, sqlalchemy-utils
+sqlalchemy-utils==0.34.0
+sqlalchemy==1.3.5
 tzlocal==1.5.1            # via apscheduler
-unidecode==1.0.22
-urllib3==1.24             # via requests, sentry-sdk
-werkzeug==0.14.1          # via flask
+unidecode==1.1.1
+urllib3==1.25.3           # via requests, sentry-sdk
+werkzeug==0.15.4          # via flask
 wtforms==2.2.1            # via flask-wtf
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.0.1        # via apscheduler
+# setuptools==41.0.1        # via apscheduler, markdown
