--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ certifi==2019.6.16        # via requests, sentry-sdk
 chardet==3.0.4            # via requests
 click==7.0
 flask-caching==1.7.2
+flask-cors==3.0.8
 flask-migrate==2.5.2
 flask-oidc==1.4.0
 flask-restful==0.3.7
@@ -40,7 +41,7 @@ redis==3.2.1
 requests==2.22.0
 rsa==4.0                  # via oauth2client
 sentry-sdk[flask]==0.9.1
-six==1.12.0               # via apscheduler, flask-oidc, flask-restful, oauth2client, python-dateutil, sqlalchemy-utils
+six==1.12.0               # via apscheduler, flask-cors, flask-oidc, flask-restful, oauth2client, python-dateutil, sqlalchemy-utils
 sqlalchemy-utils==0.34.0
 sqlalchemy==1.3.5
 tzlocal==1.5.1            # via apscheduler
