docker-compose.yml: use path for config
We don't want to use a named volume for the config mount, just a
relative path.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     - APP_CONFIG_PATH=/data/config/config.json
     - USE_EMBEDDED_DB
     volumes:
-    - config:/data/config
+    - ./config:/data/config
     external_links:
     - postgres
     depends_on:
