Get the Trackman package to pass flake8

--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,10 @@
 [flake8]
-ignore = E121,E123,E126,E226,E24,E704,E501,E266
+ignore = E121,E123,E126,E226,E24,E704,E501,E266,E722,E265
+per-file-ignores =
+    trackman/api/v1/automation.py: E711
+    trackman/api/v1/charts.py: E712
+    trackman/api/v1/playlists.py: E711,E712
+    trackman/auth/__init__.py: F401
+    trackman/__init__.py: F401,E402
+    trackman/admin_views.py: E712
+    trackman/lib.py: E711,W504,E711,E712
