--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,18 @@
 #
 alembic==1.3.1            # via flask-migrate
 aniso8601==8.0.0          # via flask-restful
+apispec==3.3.0            # via -r requirements.in
 apscheduler==3.6.3        # via -r requirements.in
+attrs==19.3.0             # via jsonschema
 authlib==0.12.1           # via -r requirements.in, loginpass
-blinker==1.4              # via sentry-sdk
+blinker==1.4              # via -r requirements.in, sentry-sdk
 cachetools==3.1.1         # via google-auth
 certifi==2019.11.28       # via requests, sentry-sdk
 cffi==1.13.2              # via cryptography
 chardet==3.0.4            # via requests
 click==7.0                # via -r requirements.in, flask
 cryptography==2.8         # via authlib
+flasgger==0.9.4           # via -r requirements.in
 flask-caching==1.7.2      # via -r requirements.in
 flask-cors==3.0.8         # via -r requirements.in
 flask-marshmallow==0.11.0  # via -r requirements.in
@@ -22,7 +25,7 @@ flask-migrate==2.5.2      # via -r requirements.in
 flask-restful==0.3.7      # via -r requirements.in
 flask-sqlalchemy==2.4.1   # via -r requirements.in, flask-migrate
 flask-wtf==0.14.2         # via -r requirements.in
-flask==1.1.1              # via -r requirements.in, flask-caching, flask-cors, flask-marshmallow, flask-migrate, flask-restful, flask-sqlalchemy, flask-wtf, sentry-sdk
+flask==1.1.1              # via -r requirements.in, flasgger, flask-caching, flask-cors, flask-marshmallow, flask-migrate, flask-restful, flask-sqlalchemy, flask-wtf, sentry-sdk
 google-api-python-client==1.7.11  # via -r requirements.in
 google-auth-httplib2==0.0.3  # via google-api-python-client
 google-auth==1.7.2        # via google-api-python-client, google-auth-httplib2
@@ -31,12 +34,14 @@ humanize==0.5.1           # via -r requirements.in
 idna==2.8                 # via requests
 itsdangerous==1.1.0       # via flask
 jinja2==2.10.3            # via flask
+jsonschema==3.2.0         # via flasgger
 loginpass==0.4            # via -r requirements.in
 mako==1.1.0               # via alembic
 markdown==3.1.1           # via -r requirements.in
 markupsafe==1.1.1         # via jinja2, mako
 marshmallow-sqlalchemy==0.22.3  # via -r requirements.in
 marshmallow==3.5.1        # via flask-marshmallow, marshmallow-sqlalchemy
+mistune==0.8.4            # via flasgger
 musicbrainzngs==0.7.1     # via -r requirements.in
 netaddr==0.7.19           # via -r requirements.in
 psycopg2==2.8.4           # via -r requirements.in
@@ -44,14 +49,16 @@ pyasn1-modules==0.2.7     # via -r requirements.in, google-auth
 pyasn1==0.4.8             # via -r requirements.in, pyasn1-modules, rsa
 pycparser==2.19           # via cffi
 pymysql==0.9.3            # via -r requirements.in
+pyrsistent==0.15.7        # via jsonschema
 python-dateutil==2.8.1    # via -r requirements.in, alembic
 python-editor==1.0.4      # via -r requirements.in, alembic
 pytz==2019.3              # via -r requirements.in, apscheduler, flask-restful, tzlocal
+pyyaml==5.3               # via flasgger
 redis==3.3.11             # via -r requirements.in
 requests==2.22.0          # via -r requirements.in, loginpass
 rsa==4.0                  # via google-auth
 sentry-sdk[flask]==0.13.5  # via -r requirements.in
-six==1.13.0               # via apscheduler, cryptography, flask-cors, flask-marshmallow, flask-restful, google-api-python-client, google-auth, python-dateutil, sqlalchemy-utils
+six==1.13.0               # via apscheduler, cryptography, flasgger, flask-cors, flask-marshmallow, flask-restful, google-api-python-client, google-auth, jsonschema, pyrsistent, python-dateutil, sqlalchemy-utils
 sqlalchemy-utils==0.36.0  # via -r requirements.in
 sqlalchemy==1.3.11        # via -r requirements.in, alembic, flask-sqlalchemy, marshmallow-sqlalchemy, sqlalchemy-utils
 tzlocal==2.0.0            # via apscheduler
