Adjust Content-Security-Policy for Flasgger

--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -1,12 +1,16 @@
+map $upstream_http_content_security_policy $trackman_csp {
+    '' "default-src 'self' https:; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'";
+}
+
 server {
     listen 80;
     absolute_redirect off;
 
-    add_header Content-Security-Policy "default-src 'self' https:; script-src 'self'; style-src 'self'; media-src 'self' *; frame-ancestors 'self'";
+    add_header Content-Security-Policy $trackman_csp;
     add_header X-Frame-Options "SAMEORIGIN";
 
     location = /_pubsub/sub {
-        add_header Content-Security-Policy "default-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'";
         add_header X-Frame-Options "SAMEORIGIN";
 
         nchan_subscriber;
@@ -16,7 +20,7 @@ server {
     }
 
     location = /_pubsub/dj/sub {
-        add_header Content-Security-Policy "default-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'";
         add_header X-Frame-Options "SAMEORIGIN";
 
         nchan_subscriber;
@@ -26,14 +30,14 @@ server {
     }
 
     location /favicon.ico {
-        add_header Content-Security-Policy "default-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'";
         add_header X-Frame-Options "SAMEORIGIN";
 
         return 404;
     }
 
     location /robots.txt {
-        add_header Content-Security-Policy "default-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'";
         add_header X-Frame-Options "SAMEORIGIN";
 
         alias /srv/http/static/robots.txt;
