--- a/.github/workflows/nginx-docker.yml
+++ b/.github/workflows/nginx-docker.yml
@@ -1,4 +1,4 @@
-name: Build trackman-nginx Docker image and push to GitHub Package Registry
+name: Build trackman-nginx Docker image and push to GitHub Container Registry
 on: [push]
 
 jobs:
@@ -9,9 +9,9 @@ jobs:
     - name: Publish to GitHub Package Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: wuvt/trackman/trackman-nginx
+        name: wuvt/trackman-nginx
         username: wuvt
         password: ${{ secrets.GITHUB_TOKEN }}
-        registry: docker.pkg.github.com
+        registry: ghcr.io
         dockerfile: nginx/Dockerfile
         tag_names: true
