Add some client-side filtering/sorting of releases
If the MusicBrainz API won't do this for us, let's do it ourselves. This
significantly improves the quality of the search results when searching
for things that include a release.

--- a/requirements.in
+++ b/requirements.in
@@ -27,5 +27,6 @@ requests
 sentry-sdk[flask]
 sqlalchemy>=1.2.0
 SQLAlchemy-Utils
+thefuzz
 Unidecode
 -e git+https://github.com/wuvt/python-musicbrainzngs#egg=musicbrainzngs
